# crispy

./: .gitignore  .rhai-repl-history  404.html  Cargo.toml  Makefile  README.md  codecov.yml  index.html  mypy.ini  patterns.py  print.html  pyproject.toml  pytest.ini  pytest.xml  tasks.py
.github/workflows/: ci-build.yaml  update-docs.yaml
crispy/: Cargo.toml  __init__.py  __main__.py  notes.py  perc.py  plugin.py  scales.py  test_base_types.py  test_ctrl.py  test_filters.py  test_pat.py  test_pitches.py  test_plugin.py
crispy/src/: controller.rs  dsl.rs  dur.rs  lex.rs  lib.rs  mini_notation.rs  pattern.rs  pattern_dsl.rs  plugin.rs
crispy_code/: Cargo.toml  ctrl.py  filters.py  pat.py
crispy_code/src/: #precise.rs#  controller.rs  dsl.rs  dur.rs  editor.rs  http_commands.rs  lex.rs  lib.rs  main.rs  parse.rs  pattern.rs  plugin.rs  plugin_export.rs  precise.rs  scales.rs  scripting.rs
crispy_code/tests/: notes_test.rs  pat_test.rs  plugin_update_pattern_test.rs
docs/: book.toml
live_code/: Cargo.toml
live_code/src/: lib.rs
livecoding/: Cargo.toml  __init__.py  __main__.py  base_types.py  ctrl.py  filters.py  grammar.py  notes_grammar.py  pat.py  pattern.py  perc.py  pitches.py  plugin.py  pytest.xml  rhythm_grammar.py  scales.py  scales_v2.py  test_base_types.py  test_ctrl.py  test_filters.py  test_grammar.py  test_notes_grammar.py  test_pat.py  test_pattern.py  test_pitches.py  test_plugin.py  test_rhythm_grammar.py  test_scales.py  test_scales_v2.py  util.py
livecoding/src/: controller.rs  lib.rs  pattern.rs  plugin.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
wasm_seq/: Cargo.toml
wasm_seq/src/: lib.rs
