[package]
name = "crispy_code"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Brian Sorahan <bsorahan@gmail.com>"]
license = "ISC"

keywords = ["midi", "plugin", "livecoding", "algorave"]
description = "A sample-accurate livecoding MIDI event sequencer"
repository = "https://github.com/briansorahan/crispy"

[dependencies]
axum = { version = "0.7.9", features = ["json", "macros", "tokio"] }
axum-macros = "0.4.2"
axum-test = "16.4.1"
logos = "0.15.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
num = "0.4.3"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
rhai = "1.21.0"
rtrb = "0.3.1"
rustyline = "15.0.0"
serde = "1.0.215"
serde_json = "1.0.134"
tokio = { version = "1.43.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
pretty_assertions = "1.4.1"
