[package]
name = "livecoding"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Brian Sorahan <bsorahan@gmail.com>"]
license = "ISC"

keywords = ["midi", "plugin", "livecoding", "algorave"]
description = "A sample-accurate livecoding MIDI event sequencer"
repository = "https://github.com/briansorahan/live"

[dependencies]
axum = { version = "0.7.9", features = ["json", "macros", "tokio"] }
axum-macros = "0.4.2"
axum-test = "16.4.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
num = "0.4.3"
rtrb = "0.3.1"
serde = "1.0.215"
serde_json = "1.0.134"
tokio = "1.41.1"

[lib]
crate-type = ["cdylib"]
